Add placeholder to text area in new alert

--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -10,7 +10,7 @@
       </div>
       <div class='row'>
         <div class='small-10 small-centered columns'>
-          <%= f.text_area :description, rows: '4' %>
+          <%= f.text_area :description, rows: '3', placeholder: 'Ex:"Popped a tube, need a size X replacement.' %>
           <input type='hidden' name="alert[latitude]" id="latitude" value=""/>
           <input type='hidden' name="alert[longitude]" id="longitude" value=""/>
           <%= f.submit %>
