Fix p line height for new alert view css

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -32,7 +32,8 @@
 section#create-alert-page {
   p {
     font-size: .8em;
-    line-height: 0.5%;
+    text-align: left;
+    line-height: 0%;
     color: #faf9df;
   }
   .centered {
