Add positioning for new alert logo

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -36,6 +36,9 @@ section#create-alert-page {
     line-height: 0%;
     color: #faf9df;
   }
+  .new_alert_logo {
+    margin-top: -1em;
+  }
   .centered {
     position: relative;
     height: 1em;
