Add avatar positioning to css for new alert

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -30,6 +30,15 @@
 }
 
 section#create-alert-page {
+  .avatar {
+    border-style: solid;
+    border-color: #faf9df;
+    border-width: 3px;
+    position: absolute;
+    border-radius: 100%;
+    bottom: 1.5em;
+    left: 7.5em;
+  }
   p {
     font-size: .8em;
     text-align: left;
