--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -1,18 +1,23 @@
 <section class='block' id='create-alert-page'>
   <div class="location_map"></div>
   <div class='centered'>
+  <%= image_tag current_user.avatar_url, size: '60', class: 'avatar'%>
 
-    <%= form_for @alert, id:"alert_form" do |f| %>
+    <%= form_tag alerts_path(@alert), method: 'post', id:"alert_form" do %>
       <div class='row'>
-        <div class='small-12 columns'>
-          <%= f.label :description %>
-          <%= f.text_field :description %>
+        <div class='small-12 small-centered columns'>
+          <p>Provide a description to a mechanic and be as</p><p>specific as possible. You'll recieve a text from</p><p>your mechanic when they're on their way.</p>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='small-10 small-centered columns'>
+          <%= text_area_tag :description, 'Ex:"Popped a tube, need a size X replacement.', rows: '3' %>
           <input type='hidden' name="location[latitude]" id="latitude" value=""/>
           <input type='hidden' name="location[longitude]" id="longitude" value=""/>
-          <%= f.submit %>
+          <%= image_submit_tag 'new_alert_circle_logo.png', height: '50', class: 'new_alert_logo' %>
         </div>
       </div>
     <% end %>
   </div>
-<div class='foot-wrapper'><%= render partial: "shared/footer" %></div>
 </section>
+<%= render partial: "shared/footer" %>
