--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -1,6 +1,8 @@
 <section class='block' id='create-alert-page'>
-  <div class="location_map"></div>
+  <div class="user_position_map"></div>
   <div class='centered'>
+  <div id='current_user_lat' style="display: none;"><%= current_user.latitude %></div>
+  <div id='current_user_lng' style="display: none;"><%= current_user.longitude %></div
   <%= image_tag current_user.avatar_url, size: '60', class: 'avatar'%>
 
     <%= form_tag alerts_path(@alert), method: 'post', id:"alert_form" do %>
@@ -14,6 +16,7 @@
           <%= text_area_tag :description, 'Ex:"Popped a tube, need a size X replacement.', rows: '3' %>
           <input type='hidden' name="alert[latitude]" id="latitude" value=""/>
           <input type='hidden' name="alert[longitude]" id="longitude" value=""/>
+
           <%= image_submit_tag 'new_alert_circle_logo.png', height: '50', class: 'new_alert_logo' %>
         </div>
       </div>
