--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -2,11 +2,9 @@
   <h1 class='small-11 small-centered columns'>Alerts located near you</h1>
 </div>
 <ul class='row no-bullet'>
-  <% @locations.each do |location| %>
+  <% @alerts.each do |alert| %>
   <div class='small-11 large-6 small-centered columns'>
-    <% if location.locatable_type == "Alert" %>
-    <%= link_to location.locatable.description, location.locatable %>
-    <% end %>
+    <%= link_to alert.description, alert %>
   </div>
   <% end %>
 </ul>
