--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,8 +13,8 @@
       <%= f.text_field :email %>
       <%= f.label :phone %>
       <%= f.text_field :phone %>
-      <input type='hidden' name="alert[latitude]" id="latitude" value=""/>
-      <input type='hidden' name="alert[longitude]" id="longitude" value=""/>
+      <input type='hidden' name="location[latitude]" id="latitude" value=""/>
+      <input type='hidden' name="location[longitude]" id="longitude" value=""/>
       <%= f.submit 'Signup', class: 'button' %>
     </div>
   </div>
