Remove border for alert logo

--- a/app/assets/stylesheets/view.css.scss
+++ b/app/assets/stylesheets/view.css.scss
@@ -4,10 +4,7 @@
 }
 
 section#alert-incomplete-page {
-  .avatar {
-    border-style: solid;
-    border-color: #faf9df;
-    border-width: 3px;
+  .alert_logo {
     position: absolute;
     border-radius: 100%;
     bottom: 1.5em;
