--- a/app/assets/stylesheets/view.css.scss
+++ b/app/assets/stylesheets/view.css.scss
@@ -1,6 +1,6 @@
 .location_map {
   margin-top: -32em;
-  height: 15em;
+  height: 13em;
 }
 
 section#alert-incomplete-page {
@@ -9,6 +9,7 @@ section#alert-incomplete-page {
     border-radius: 100%;
     bottom: 1.5em;
     left: 7.5em;
+    top: -2em;
   }
   p {
     font-size: .8em;
@@ -25,5 +26,17 @@ section#alert-incomplete-page {
     top: 2em;
   }
   height: 90%;
+
+}
+
+#creator_header {
+  margin-top: -2em;
+  background-color: #bdc2c6;
+  height: 6em;
+}
+
+#description_header {
+  margin-top: -2em;
   background-color: #00aac8;
+  height: 6em;
 }
