--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -24,9 +24,51 @@
   height:500px;
 }
 
-.user_position_map {
+#create-alert-map {
   margin-top: -32em;
   height: 15em;
+}
+
+#alert-index-page {
+  h2 {
+    color: #faf9df;
+    margin-top: -1.5em;
+  }
+  .alert-listing {
+    h4 {
+      position: relative;
+      bottom: 3em;
+      margin-bottom: 0;
+      left: 4em;
+      text-align: left;
+      color: #00aac8;
+      opacity: 0.7;
+    }
+    .columns {
+    background-color: #faf9df;
+    border-radius: 0.25em;
+    margin-top: 1em;
+      .avatar {
+        bottom: 4%;
+        right: 40%;
+      }
+    }
+  }
+  .avatar {
+    border-style: solid;
+    border-color: #faf9df;
+    border-width: 3px;
+    border-radius: 100%;
+    position: relative;
+    bottom: 2em;
+  }
+  background-color: #bdc2c6;
+}
+
+#alert-index-map {
+  margin-top: -1.5em;
+  height: 15em;
+
 }
 
 section#create-alert-page {
