--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,15 +1,17 @@
-<div class='row'>
-  <h1 class='small-11 small-centered columns'>Alerts located near you</h1>
-</div>
-<ul class='row no-bullet'>
+<section class='block' id='alert-index-page'>
+  <div id='alert-index-map' class='user_position_map'></div>
+  <div class='centered'>
+  <div id='current_user_lat' style="display: none;"><%= current_user.latitude %></div>
+  <div id='current_user_lng' style="display: none;"><%= current_user.longitude %></div>
+  <%= image_tag current_user.avatar_url, size: '60', class: 'avatar'%>
+  <h2>Alerts in your area</h2>
   <% @alerts.each do |alert| %>
-  <div class='small-11 large-6 small-centered columns'>
-    <li><%= link_to alert.description, alert_path(alert) %></li>
-    <ul>
-      <li><%= alert.creator.username %></li>
-      <li><%= alert.status %></li>
-      <li><%= alert.latitude %>, <%= alert.longitude %></li>
-    </ul>
+  <div class='row alert-listing'>
+    <div class='small-12 small-centered columns'>
+      <%= image_tag alert.creator.avatar_url, size: '60', class: 'avatar' %>
+      <h4><%= alert.creator.full_name %></h4>
+    </div>
   </div>
   <% end %>
-</ul>
+</div>
+</section>
