Add location image on index

--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -11,6 +11,7 @@
       <%= image_tag alert.creator.avatar_url, size: '50', class: 'avatar' %>
       <h4><%= alert.creator.full_name %></h4>
       <p><%= alert.description %></p>
+      <%= image_tag 'location_icon.png', size: '22', class: 'location-icon' %>
     </div>
   </div>
   <% end %>
