Add positioning for location image

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -33,6 +33,11 @@
   .small-12 {
     height: 50px
   }
+  .location-icon {
+    position: relative;
+    bottom: 5.25em;
+    left: 8em;
+  }
   h2 {
     color: #faf9df;
     margin-top: -1.5em;
