Add link to entire div

--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -7,12 +7,14 @@
   <h2>Alerts in your area</h2>
   <% @alerts.each do |alert| %>
   <div class='row alert-listing'>
+    <a href='/alerts/<%= alert.id %>'>
     <div class='small-12 small-centered columns'>
       <%= image_tag alert.creator.avatar_url, size: '50', class: 'avatar' %>
       <h4><%= alert.creator.full_name %></h4>
       <p><%= alert.description %></p>
       <%= image_tag 'location_icon.png', size: '22', class: 'location-icon' %>
     </div>
+    </a>
   </div>
   <% end %>
 </div>
