--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -19,6 +19,10 @@
   background-color: #00aac8;
 }
 
+.location_map {
+  margin-top: -1.5em;
+  height: 15em;
+}
 
 .direction_map {
   height:500px;
