--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -33,15 +33,44 @@
   height: 15em;
 }
 #alert-incomplete-page {
+  .trash-icon {
+    position: absolute;
+    right: 8.75em;
+    bottom: 0.5em;  }
   .response {
+    p#desc-cont {
+      color: #bdc2c6;
+      bottom: 10px;
+      position: relative;
+      left: 0.6em;    }
+    h6 {
+      color: #00aac8;
+      opacity: 0.6;
+      width: 0;
+      top: 0em;    }
     background-color: #00aac8;
     position: absolute;
     width: 100%;
     bottom: 0;
     height: 12em;
+    .columns {
+      background-color: white;
+      top: 1em;
+      border-radius: 3px;
+      height: 6em;    }
     p {
-      color: white;
+      width: 0;
+      color: #faf9df;
     }
+    p#response-title {
+
+    }
+    p#response-header {
+    width: 0;
+    color: #faf9df;
+    top: 0.5em;
+    left: 8px;
+    letter-spacing: -0.25px;    }
   }
   .avatar {
     border-style: solid;
