--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -3,6 +3,10 @@
   <div class='centered'>
   <div id='current_user_lat' style="display: none;"><%= current_user.location.latitude %></div>
   <div id='current_user_lng' style="display: none;"><%= current_user.location.longitude %></div>
+  <div id='alert_coord_lat' style="display: none;">
+    <%= @alerts.map {|alert| alert.location.latitude} %></div>
+  <div id='alert_coord_lng' style="display: none;">
+    <%= @alerts.map {|alert| alert.location.longitude} %></div>
   <%= image_tag current_user.avatar_url, size: '60', class: 'avatar'%>
   <h2>Alerts in your area</h2>
   <% @alerts.each do |alert| %>
