Add correct embeded ruby for link_to and image_tag in incomplete view

--- a/app/views/alerts/show_incomplete.html.erb
+++ b/app/views/alerts/show_incomplete.html.erb
@@ -26,7 +26,7 @@
           <h6>Description</h6>
           <p id='desc-cont'><%= @alert.description %></p>
         </div>
-        <a href="/alerts/#{@alert.id}" method="delete"><%= image_tag 'trash_icon.png', size: '40', class: "trash-icon" %></a>
+          <%= link_to image_tag('trash_icon.png', size: '40', class: "trash-icon"), @alert, method: :delete %>
     </div>
       <% else %>
         <%= form_for @alert do |f| %>
