Add css for help icon

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -36,7 +36,13 @@
   .trash-icon {
     position: absolute;
     right: 8.75em;
-    bottom: 0.5em;  }
+    bottom: 0.5em;
+  }
+  .help-icon {
+    position: absolute;
+    right: 12.75em;
+    bottom: 0.5em;
+  }
   .response {
     p#desc-cont {
       color: #bdc2c6;
