--- a/app/views/alerts/show_incomplete.html.erb
+++ b/app/views/alerts/show_incomplete.html.erb
@@ -34,10 +34,12 @@
           <p id='desc-cont'><%= @alert.description %></p>
         </div>
         <%= form_tag alert_path(@alert), method: 'patch' do %>
+          <input value="<%= current_user.location.latitude %>" type='hidden' name='mechanic[latitude]'>
+          <input value="<%= current_user.location.longitude %>" type='hidden' name='mechanic[longitude]'>
           <input value="in progress" type="hidden" name="alert[status]" id="alert_status">
           <input value="<%= current_user.id %>" type="hidden" name="alert[mechanic_id]" id="alert_mechanic_id">
-          <input type='hidden' name="google[distance]" id="distance" value=""/>
-          <input type='hidden' name="google[duration]" id="duration" value=""/>
+          <input type='hidden' name="receipt[distance]" id="distance" value=""/>
+          <input type='hidden' name="receipt[duration]" id="duration" value=""/>
           <%= image_submit_tag "help_icon2.png", width: '40', class: 'help-icon' %>
           <% end %>
         <% end %>
