--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,5 +1,5 @@
 <section class='block' id='alert-index-page'>
-  <div id='alert-index-map' class='user_position_map'></div>
+  <div id='alert-index-map' class='index_position_map'></div>
   <div class='centered'>
   <div id='current_user_lat' style="display: none;"><%= current_user.location.latitude %></div>
   <div id='current_user_lng' style="display: none;"><%= current_user.location.longitude %></div>
