move the ajax element into splash page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <% if signed_in? %>
+  <div id="user_id" style="display: none;"><%= current_user.id %></div>
   <section id='homepage-hero-signed-in' class='block-splash'>
     <div class='centered'>
       <div class='profile-layer'>
