Add some content to in progress page view WIP

--- a/app/views/alerts/show_in_progress.html.erb
+++ b/app/views/alerts/show_in_progress.html.erb
@@ -1,12 +1,20 @@
-<h1>Alert status: <%= @alert.status %></h1>
-<p><%= @alert.description %></p>
-<p>Posted <%= @alert.time_diff %> by <%= @alert.creator.first_name %></p>
 <div id="lat" style="display: none;"><%= @alert.location.latitude %></div>
 <div id="lng" style="display: none;"><%= @alert.location.longitude %></div>
+<div id='current_lat' style="display: none;"><%= current_user.location.latitude %></div>
+<div id='current_lng' style="display: none;"><%= current_user.location.longitude %></div>
 
-<div>
+<%= image_tag 'alert__progress_logo_center.png', size: '50', class: 'alert_logo' %>
+<%= image_tag @alert.creator.avatar_url, size: '60', class: 'avatar' %>
+<%= @alert.creator.full_name %>
+<%= @alert.time_diff %>
+<%= @alert.status.capitalize %>
+<%= image_tag 'location_icon.png', size: '22', class: 'location-icon' %>
+<%= @alert.description %>
+<%= @alert.receipt.mechanic.full_name%> has responded and is on their way
+
+
+
   <% if @alert.creator == current_user %>
-  <p><%= @alert.receipt.mechanic.first_name%> has offered to help!<p>
     <%= form_for @alert do |f| %>
       <%= f.hidden_field :status, value: "complete" %>
       <%= f.submit "Complete this alert" %>
@@ -27,4 +35,3 @@
     <div id='lng_mech' style="display: none;"><%= @alert.receipt.location.longitude %></div>
     <div class="direction_map"></div>
   <% end %>
-</div>
