--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -3,10 +3,12 @@
   <div class='centered'>
   <div id='current_user_lat' style="display: none;"><%= current_user.location.latitude %></div>
   <div id='current_user_lng' style="display: none;"><%= current_user.location.longitude %></div>
-  <div id='alert_coord_lat' style="display: none;">
-    <%= @alerts.map {|alert| alert.location.latitude} %></div>
-  <div id='alert_coord_lng' style="display: none;">
-    <%= @alerts.map {|alert| alert.location.longitude} %></div>
+  <% @alerts.each do |alert| %>
+    <div class='latitude'><%=alert.location.latitude%></div>
+  <% end %>
+  <% @alerts.each do |alert| %>
+    <div class='longitude'><%=alert.location.longitude%></div>
+  <% end %>
   <%= image_tag current_user.avatar_url, size: '60', class: 'avatar'%>
   <h2>Alerts in your area</h2>
   <% @alerts.each do |alert| %>
