--- a/app/views/alerts/show_in_progress.html.erb
+++ b/app/views/alerts/show_in_progress.html.erb
@@ -18,15 +18,21 @@
 
   <% if @alert.creator == current_user %>
     <%= form_tag alert_path(@alert), method: 'patch' do %>
-    <input value="complete" type="hidden" name="alert[status]" id="alert_status">
-    <%= image_submit_tag 'alert__complete_logo_center.png', width: '40', class: 'help-icon' %>
+    <input value="incomplete" type="hidden" name="alert[status]" id="alert_status">
+    <%= image_submit_tag 'cancel_icon.png', width: '40', class: 'help-icon', style: 'background-color: black;' %>
     <% end %>
 
+    <%= form_tag alert_path(@alert), method: 'patch' do %>
+    <input value="complete" type="hidden" name="alert[status]" id="alert_status">
+    <%= image_submit_tag 'alert__complete_logo_center.png', width: '40', class: 'help-icon', style: 'background-color: black;' %>
+    <% end %>
+
+    <%= link_to image_tag('trash_icon.png', size: '40', class: "trash-icon"), @alert, method: :delete, style: 'background-color: black;' %>
   <% end %>
 
   <% if @alert.receipt.mechanic == current_user %>
     <%= form_tag alert_path(@alert), method: 'patch' do %>
     <input value="incomplete" type="hidden" name="alert[status]" id="alert_status">
-    <%= image_submit_tag 'cancel_icon.png', width: '40', class: 'help-icon' %>
+    <%= image_submit_tag 'cancel_icon.png', width: '40', class: 'help-icon', style: 'background-color: black;' %>
     <% end %>
   <% end %>
