--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,35 +1,28 @@
-<div>
-	<% if authorized?(@user)%>
-		<%= link_to 'Edit', edit_user_path(@user) %>
-	<% end %>
+<%= image_tag(@user.avatar_url) %>
+<% if authorized?(@user)%>
+	<%= link_to 'Edit', edit_user_path(@user) %>
+<% end %>
 
-	<%= image_tag(@user.avatar_url) %>
-	<h1>Welcome <%= @user.full_name %></h1>
-	<div>Member Since: <%= @user.time_diff %></div>
+<%= @user.full_name %>
 
-	<% if @user.bio.empty? %>
-		<%= link_to 'Click Here To Edit', edit_user_path(@user) %>
-	<% else %>
-		<div>Bio: <%= @user.bio %></div>
-	<% end %>
+<%= image_tag("blank_avatar.png") %>
 
-	<div class='row' style="width: 100%;">
-		<div class='large-6 column text-center'>
-			<h2>Your Created Alerts</h2>
-			<ul>
-				<% @alerts.each do |alert| %>
-					<li><%= link_to alert.description, alert_path(alert) %></li>
-				<% end %>
-			</ul>
-		</div>
+<% if @user.bio.empty? %>
+	<%= link_to 'Click Here To Edit', edit_user_path(@user) %>
+<% else %>
+	<%= @user.bio %>
+<% end %>
 
-		<div class='large-6 column text-center'>
-			<h2>Your Reciepts</h2>
-			<ul>
-				<% @receipts.each do |receipt| %>
-					<li><%= link_to receipt.alert.description,   receipt.alert %></li>
-				<% end %>
-			</ul>
-		</div>
-	</div>
-</div>
+Created Alerts
+<% @alerts.each do |alert| %>
+	<%= image_tag(alert.mechanic.avatar_url) %>
+	<%= alert.time_diff %>
+	<%= alert.status.capitalize %>
+<% end %>
+
+Accepted Alerts
+<% @receipts.each do |receipt| %>
+	<%= image_tag(receipt.alert.creator.avatar_url) %>
+	<%= receipt.alert.creator.full_name %>
+	<%= link_to receipt.alert.description, receipt.alert %>
+<% end %>
